@@ -8,5 +8,7 @@ Driver files are provided in /mongodriver
 + mongodb-driver-3.11.2
 + mongodb-driver-core-3.11.0
 
+VM options: --module-path C:\Java\javafx-sdk-13.0.1\lib --add-modules javafx.controls,javafx.fxml
+
 Thank you
 - Anh Pham -
